Fixed align "See all" set default image & Added breadcrum

--- a/src/app/pages/dashboard/dashboard.page.scss
+++ b/src/app/pages/dashboard/dashboard.page.scss
@@ -331,8 +331,8 @@ ion-content,
         .item-main-wrapper{
           margin-top: 35px !important;
         }
-        .see-section{
-          right: 37px !important;
+        .see-wrapper{
+          position: relative;
         }
       }
     }
